@@ -1,3 +1,13 @@
+2021-07-26  Alex Christensen  <achristensen@webkit.org>
+
+        WKUserContentController.removeAllScriptMessageHandlers() doesn't release the message handlers
+        https://bugs.webkit.org/show_bug.cgi?id=228271
+
+        Reviewed by Sihui Liu.
+
+        * TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm:
+        (TEST):
+
 2021-07-26  Kate Cheney  <katherine_cheney@apple.com>
 
         ServiceWorkerRegistration.unregister method fails in WKWebView
